--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,50 +1,60 @@
-name: Secure Deploy Static App to EC2
+name: Deploy Static App to EC2
 
 on:
   push:
     branches:
       - main
 
-permissions:
-  contents: read
-
 jobs:
-  deploy:
+
+  # 1️⃣ BUILD JOB
+  build:
     runs-on: ubuntu-latest
 
     steps:
-
-    # STEP 1️⃣ - Checkout Code
     - name: Checkout Code
       uses: actions/checkout@v4
 
-    # STEP 2️⃣ - Secure Login + Build + Push
-    - name: Login, Build and Push Docker Image
+    - name: Build Docker Image
       run: |
-        IMAGE_TAG=${{ github.sha }}
+        docker build -t harisankarsundaram/my-html-app:1.0 .
+
+  # 2️⃣ PUSH JOB
+  push:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Login and Push Image
+      run: |
         echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login \
           -u "${{ secrets.DOCKERHUB_USERNAME }}" \
           --password-stdin
 
-        docker build -t harisankarsundaram/my-html-app:$IMAGE_TAG .
-        docker push harisankarsundaram/my-html-app:$IMAGE_TAG
+        docker build -t harisankarsundaram/my-html-app:1.0 .
+        docker push harisankarsundaram/my-html-app:1.0
 
-        echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+  # 3️⃣ DEPLOY JOB
+  deploy:
+    runs-on: ubuntu-latest
+    needs: push
 
-    # STEP 3️⃣ - Secure SSH Deploy
+    steps:
     - name: Deploy to EC2
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
-        port: 22
         script: |
           docker stop my-html-app || true
           docker rm my-html-app || true
-          docker pull harisankarsundaram/my-html-app:${IMAGE_TAG}
+          docker pull harisankarsundaram/my-html-app:1.0
           docker run -d \
             -p 80:80 \
             --restart unless-stopped \
             --name my-html-app \
-            harisankarsundaram/my-html-app:${IMAGE_TAG}
+            harisankarsundaram/my-html-app:1.0
